<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


  <TextView
      android:id="@+id/textView3"
      android:layout_width="43dp"
      android:layout_height="28dp"
      android:layout_marginStart="28dp"
      android:layout_marginTop="132dp"
      android:text="CM"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="55dp"
      android:layout_height="26dp"
      android:layout_marginStart="28dp"
      android:layout_marginTop="68dp"
      android:text="DE/EU"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="43dp"
      android:layout_height="28dp"
      android:layout_marginStart="28dp"
      android:layout_marginTop="64dp"
      android:text="UK"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="43dp"
      android:layout_height="28dp"
      android:layout_marginStart="28dp"
      android:layout_marginTop="52dp"
      android:text="US"
      android:textSize="18sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <ImageButton
      android:id="@+id/zurueck"
      android:layout_width="45dp"
      android:layout_height="37dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:background="@null"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="?attr/actionModeCloseDrawable" />

  <EditText
      android:id="@+id/editText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="96dp"
      android:layout_marginTop="116dp"
      android:ems="10"
      android:hint="@string/Cm"
      android:inputType="textPersonName"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editText2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="96dp"
      android:layout_marginTop="44dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:hint="@string/DeEu"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText" />

  <EditText
      android:id="@+id/editText3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="96dp"
      android:layout_marginTop="44dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:hint="@string/UK"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText2" />

  <EditText
      android:id="@+id/editText4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="96dp"
      android:layout_marginTop="44dp"
      android:layout_marginBottom="272dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:hint="@string/US"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText3"
      app:layout_constraintVertical_bias="1.0" />

  <com.spark.submitbutton.SubmitButton
      android:id="@+id/submit"
      android:layout_width="184dp"
      android:layout_height="107dp"
      android:layout_marginStart="100dp"
      android:layout_marginEnd="80dp"
      android:layout_marginBottom="64dp"
      android:text="@string/submit"
      android:textColor="@color/gray"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:sub_btn_background="@color/white"
      app:sub_btn_duration="3000"
      app:sub_btn_line_color="#e71a2f"
      app:sub_btn_ripple_color="#d91939"
      app:sub_btn_tick_color="@color/white" />

  <TextView
      android:id="@+id/fehlermel"
      android:layout_width="296dp"
      android:layout_height="26dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="44dp"
      android:layout_marginEnd="8dp"
      android:gravity="center"
      android:textColor="@color/colorPrimary"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>